--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.c
 spring.security.oauth2.client.provider.github.user-name-attribute=login
 
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_auth
-spring.datasource.username=root
-spring.datasource.password=senha
+spring.datasource.username=postgres
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
