--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-rest</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
