--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,6 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-
+spring.config.import=optional:file:.env[.properties]
 logging.level.org.springframework.security=DEBUG
 
