Modificações no properties, controller e pom.xml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 # Configuração do OAuth2 com GitHub
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
+spring.security.oauth2.client.registration.github.scope=user,user:email
+spring.security.oauth2.client.provider.github.user-name-attribute=login
 spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
 spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
 spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
-spring.security.oauth2.client.provider.github.user-name-attribute=login
+
 
 # Configuração do banco de dados PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/oauth_db
