--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,10 @@
             
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
 
     </dependencies>
 
